--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "csv-parse": "^5.3.5",
     "csv-parser": "^3.0.0",
-    "request": "^2.88.2"
+    "parse": "^4.0.1",
+    "querystring": "^0.2.1",
+    "request": "^2.88.2",
+    "update-query-string": "^0.0.3"
   }
 }
